--- a/buildroot/configs/cvitek_SG200X_musl_riscv64_defconfig
+++ b/buildroot/configs/cvitek_SG200X_musl_riscv64_defconfig
@@ -50,17 +50,6 @@ BR2_PACKAGE_KMOD=y
 # dont rename network card,
 # BR2_PACKAGE_EUDEV_RULES_GEN is not set
 BR2_PACKAGE_EUDEV_ENABLE_HWDB=y
-BR2_PACKAGE_BLUEZ5_UTILS=y
-BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
-BR2_PACKAGE_BLUEZ5_UTILS_TOOLS=y
-BR2_PACKAGE_BLUEZ5_UTILS_DEPRECATED=y
-BR2_PACKAGE_BLUEZ5_UTILS_PLUGINS_HID=y
-BR2_PACKAGE_BLUEZ5_UTILS_PLUGINS_NETWORK=y
-BR2_PACKAGE_BLUEZ5_UTILS_TOOLS_HID2HCI=y
-BR2_PACKAGE_BLUEZ5_UTILS_MONITOR=y
-BR2_PACKAGE_BLUEZ_ALSA=y
-BR2_PACKAGE_BLUEZ_ALSA_RFCOMM=y
-BR2_PACKAGE_BLUEZ_ALSA_HCITOP=y
 BR2_PACKAGE_NTP=y
 BR2_PACKAGE_NTP_NTPD=y
 BR2_PACKAGE_NTP_NTPDATE=y
@@ -225,133 +214,16 @@ BR2_PACKAGE_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_PACKAGE_UBOOT_TOOLS_MKIMAGE=y
 BR2_PACKAGE_UBOOT_TOOLS_DUMPIMAGE=y
 
-# if your sdnand is small, you can delete some package
-# BR2_PACKAGE_IMAGEMAGICK is not set
-# BR2_PACKAGE_OCRAD is not set
-# BR2_PACKAGE_SDL is not set
-# BR2_PACKAGE_SDL_FBCON is not set
-# BR2_PACKAGE_SDL_GFX is not set
-# BR2_PACKAGE_SDL_IMAGE is not set
-# BR2_PACKAGE_SDL_IMAGE_BMP is not set
-# BR2_PACKAGE_SDL_IMAGE_GIF is not set
-# BR2_PACKAGE_SDL_IMAGE_JPEG is not set
-# BR2_PACKAGE_SDL_IMAGE_PNG is not set
-# BR2_PACKAGE_SDL_IMAGE_WEBP is not set
-# BR2_PACKAGE_SDL_MIXER is not set
-# BR2_PACKAGE_SDL_NET is not set
-# BR2_PACKAGE_SDL_SOUND is not set
-# BR2_PACKAGE_SDL_SOUND_PLAYSOUND is not set
-# BR2_PACKAGE_LBREAKOUT2 is not set
-# BR2_PACKAGE_LBREAKOUT2_AUDIO is not set
-# BR2_PACKAGE_LBREAKOUT2_NET is not set
-# BR2_PACKAGE_LTRIS is not set
-# BR2_PACKAGE_LTRIS_AUDIO is not set
-# BR2_PACKAGE_PRBOOM is not set
-# BR2_PACKAGE_DOOM_WAD is not set
 BR2_PACKAGE_TCL=y
 # BR2_PACKAGE_TCL_SHLIB_ONLY is not set
 # BR2_PACKAGE_TCL_DEL_ENCODINGS is not set
 BR2_PACKAGE_EXPECT=y
 BR2_PACKAGE_TCLLIB=y
-BR2_PACKAGE_OPENCV4=y
-BR2_PACKAGE_OPENCV4_LIB_CALIB3D=y
-BR2_PACKAGE_OPENCV4_LIB_DNN=y
-BR2_PACKAGE_OPENCV4_LIB_HIGHGUI=y
-BR2_PACKAGE_OPENCV4_LIB_OBJDETECT=y
-BR2_PACKAGE_OPENCV4_LIB_PHOTO=y
-BR2_PACKAGE_OPENCV4_LIB_SHAPE=y
-BR2_PACKAGE_OPENCV4_LIB_STITCHING=y
-BR2_PACKAGE_OPENCV4_LIB_SUPERRES=y
-BR2_PACKAGE_OPENCV4_LIB_TS=y
-BR2_PACKAGE_OPENCV4_LIB_VIDEOSTAB=y
-BR2_PACKAGE_OPENCV4_BUILD_TESTS=y
-BR2_PACKAGE_OPENCV4_BUILD_PERF_TESTS=y
-BR2_PACKAGE_OPENCV4_WITH_FFMPEG=y
-BR2_PACKAGE_OPENCV4_WITH_JPEG=y
-BR2_PACKAGE_OPENCV4_WITH_PNG=y
-BR2_PACKAGE_OPENCV4_WITH_TBB=y
-BR2_PACKAGE_OPENCV4_WITH_TIFF=y
-BR2_PACKAGE_OPENCV4_WITH_V4L=y
-BR2_PACKAGE_OPENCV4_WITH_WEBP=y
-BR2_PACKAGE_OPENCV4_INSTALL_DATA=y
 BR2_PACKAGE_LIBQRENCODE=y
 BR2_PACKAGE_LIBQRENCODE_TOOLS=y
-BR2_PACKAGE_FFMPEG=y
-BR2_PACKAGE_FFMPEG_FFMPEG=y
-BR2_PACKAGE_FFMPEG_FFPROBE=y
-BR2_PACKAGE_FFMPEG_GPL=y
-BR2_PACKAGE_FFMPEG_NONFREE=y
-BR2_PACKAGE_FFMPEG_POSTPROC=y
-# BR2_PACKAGE_MULTICAT is not set
-# BR2_PACKAGE_WQY_ZENHEI is not set
-# BR2_PACKAGE_DEJAVU is not set
-# BR2_PACKAGE_GNUPLOT is not set
-# BR2_PACKAGE_TESSERACT_OCR is not set
-# BR2_PACKAGE_TESSERACT_OCR_LANG_ENG is not set
-# BR2_PACKAGE_TESSERACT_OCR_LANG_CHI_SIM is not set
-# BR2_PACKAGE_TESSERACT_OCR_LANG_CHI_TRA is not set
-# BR2_PACKAGE_QT5 is not set
-# BR2_PACKAGE_QT5BASE_SQLITE_SYSTEM is not set
-# BR2_PACKAGE_QT5BASE_GUI is not set
-# BR2_PACKAGE_QT5BASE_LINUXFB is not set
-# BR2_PACKAGE_QT5BASE_WIDGETS is not set
-# BR2_PACKAGE_QT5BASE_DEFAULT_QPA="linuxf is not set
-# BR2_PACKAGE_QT5BASE_FONTCONFIG is not set
-# BR2_PACKAGE_QT5BASE_GIF is not set
-# BR2_PACKAGE_QT5BASE_PNG is not set
-# BR2_PACKAGE_QT5BASE_JPEG is not set
-# BR2_PACKAGE_QT5BASE_SYSLOG is not set
-# BR2_PACKAGE_QT5BASE_DBUS is not set
-# BR2_PACKAGE_QT5BASE_TSLIB is not set
-# BR2_PACKAGE_QT5BASE_EXAMPLES is not set
-# BR2_PACKAGE_QT5BASE_CONCURRENT is not set
-# BR2_PACKAGE_QT5CONNECTIVITY is not set
-# BR2_PACKAGE_QT5IMAGEFORMATS is not set
-# BR2_PACKAGE_QT5MULTIMEDIA is not set
-# BR2_PACKAGE_QT5SENSORS is not set
-# BR2_PACKAGE_QT5SERIALBUS is not set
-# BR2_PACKAGE_QT5CHARTS is not set
-# BR2_PACKAGE_QT5COAP is not set
-# BR2_PACKAGE_QT5ENGINIO is not set
-# BR2_PACKAGE_QT5KNX is not set
-# BR2_PACKAGE_QT5LOCATION is not set
-# BR2_PACKAGE_QT5MQTT is not set
-# BR2_PACKAGE_QT5OPCUA is not set
-# BR2_PACKAGE_QT5REMOTEOBJECTS is not set
-# BR2_PACKAGE_QT5SPEECH is not set
-# BR2_PACKAGE_QT5SVG is not set
-# BR2_PACKAGE_QT5WEBSOCKETS is not set
-# BR2_PACKAGE_QT5WEBCHANNEL is not set
-# BR2_PACKAGE_QEXTSERIALPORT is not set
-# BR2_PACKAGE_QT5X11EXTRAS is not set
-# BR2_PACKAGE_QT5XMLPATTERNS is not set
-# BR2_PACKAGE_QT5BASE_MYSQL is not set
-# BR2_PACKAGE_QJSON is not set
-# BR2_PACKAGE_QUAZIP is not set
-
-# BR2_PACKAGE_OPENCV4_LIB_PYTHON is not set
-# BR2_PACKAGE_OPENCV4_WITH_QT5 is not set
-# BR2_PACKAGE_PYTHON3 is not set
-
-# BR2_PACKAGE_MGBA is not set
-# BR2_PACKAGE_GB_TEST_ROMS is not set
-
-# BR2_PACKAGE_NGINX=y
-# BR2_PACKAGE_NGINX_HTTP=y
-# BR2_PACKAGE_NGINX_HTTP_DAV_MODULE=y
-# BR2_PACKAGE_NGINX_HTTP_MP4_MODULE=y
-# BR2_PACKAGE_NGINX_HTTP_FLV_MODULE=y
-# BR2_PACKAGE_NGINX_HTTP_GUNZIP_MODULE=y
-# BR2_PACKAGE_NGINX_STREAM=y
-# BR2_PACKAGE_NGINX_SELECT_MODULE=y
-# BR2_PACKAGE_NGINX_HTTP_FASTCGI_MODULE=y
-# BR2_PACKAGE_NGINX_HTTP_UWSGI_MODULE=y
-# BR2_PACKAGE_NGINX_HTTP_SCGI_MODULE=y
 
 BR2_PACKAGE_VIM=y
 BR2_PACKAGE_VIM_RUNTIME=y
-
-BR2_PACKAGE_NANO=y
 
 BR2_PACKAGE_AXP2101=y
 
@@ -365,3 +237,6 @@ BR2_PACKAGE_BUSYBOX_CONFIG_FRAGMENT_FILES="$(TOPDIR)/board/cvitek/SG200X/busybox
 BR2_TARGET_TZ_INFO=y
 BR2_TARGET_TZ_ZONELIST="default"
 BR2_TARGET_LOCALTIME="Etc/UTC"
+
+BR2_PACKAGE_WGET=y
+BR2_PACKAGE_NANO=y
